# Simulator

./: .gitignore  LICENSE  README.md
bfmc_workspace/src/models_pkg/: CMakeLists.txt  README.md  package.xml
bfmc_workspace/src/models_pkg/camera/: model.sdf
bfmc_workspace/src/models_pkg/camera_follow/: model.config
bfmc_workspace/src/models_pkg/car_body/: model.config  model.sdf
bfmc_workspace/src/models_pkg/car_body/meshes/: CarBody.dae  CarBody_vech.dae
bfmc_workspace/src/models_pkg/chassis/: model.config  model.sdf
bfmc_workspace/src/models_pkg/chassis/meshes/: chassisV5.dae
bfmc_workspace/src/models_pkg/crosswalk_sign/: model.sdf
bfmc_workspace/src/models_pkg/enter_highway_sign/: model.sdf
bfmc_workspace/src/models_pkg/leave_highway_sign/: model.sdf
bfmc_workspace/src/models_pkg/leave_highway_sign/meshes/: leave_highway_sign.dae
bfmc_workspace/src/models_pkg/oneway_sign/: model.config  model.sdf
bfmc_workspace/src/models_pkg/oneway_sign/meshes/: oneway_sign.dae
bfmc_workspace/src/models_pkg/p_alpha_d/: model.sdf
bfmc_workspace/src/models_pkg/p_alpha_s/: model.config  model.sdf
bfmc_workspace/src/models_pkg/p_beta_s/: model.config  model.sdf
bfmc_workspace/src/models_pkg/p_gamma_d/: model.config
bfmc_workspace/src/models_pkg/p_gamma_s/: model.config  model.sdf
bfmc_workspace/src/models_pkg/p_organizing_d/: model.sdf
bfmc_workspace/src/models_pkg/p_organizing_s/: model.config  model.sdf
bfmc_workspace/src/models_pkg/parking_sign/: model.config  model.sdf
bfmc_workspace/src/models_pkg/pedestrian_object/meshes/: pedestrian_object.dae  pedestrian_object_oriignal.dae
bfmc_workspace/src/models_pkg/priority_sign/: model.config  model.sdf
bfmc_workspace/src/models_pkg/prohibited_sign/: model.config  model.sdf
bfmc_workspace/src/models_pkg/prohibited_sign/meshes/: notallowed_sign.dae
bfmc_workspace/src/models_pkg/ramp/: model.sdf
bfmc_workspace/src/models_pkg/ramp/meshes/: ramp.dae
bfmc_workspace/src/models_pkg/rcCar_assembly/: model.sdf
bfmc_workspace/src/models_pkg/rcCar_assembly_REC/: model.sdf
bfmc_workspace/src/models_pkg/rcCar_assembly_obstacle/: model.config  model.sdf
bfmc_workspace/src/models_pkg/roadblock/: model.sdf
bfmc_workspace/src/models_pkg/roundabout_sign/: model.sdf
bfmc_workspace/src/models_pkg/roundabout_sign/meshes/: roundabout_sign.dae
bfmc_workspace/src/models_pkg/separator/: model.sdf
bfmc_workspace/src/models_pkg/steering_column/: model.config  model.sdf
bfmc_workspace/src/models_pkg/stop_sign/: model.sdf
bfmc_workspace/src/models_pkg/subassembly/meshes/: sign_leg.dae
bfmc_workspace/src/models_pkg/track/: model.config  model.sdf
bfmc_workspace/src/models_pkg/traffic_light/: model.config  model.sdf
bfmc_workspace/src/models_pkg/traffic_light/meshes/: traffic_light_case.dae
bfmc_workspace/src/models_pkg/wheel_left/: model.sdf  model_originalsdf
bfmc_workspace/src/models_pkg/wheel_left/meshes/: rim.dae
bfmc_workspace/src/models_pkg/wheel_right/: model (copy).sdf  model.config  model.sdf
bfmc_workspace/src/models_pkg/wheel_right/meshes/: rim.dae  rim_old.dae
bfmc_workspace/src/plugins_pkgs/car_plugin/: CMakeLists.txt  package.xml
bfmc_workspace/src/plugins_pkgs/car_plugin/include/: carlikerobot.hpp  carlikerobot_ros_plugin.hpp
bfmc_workspace/src/plugins_pkgs/car_plugin/msg/: Command.msg  Key.msg  Response.msg
bfmc_workspace/src/plugins_pkgs/car_plugin/src/: carlikerobot.cpp  carlikerobot_ros_plugin.cpp
bfmc_workspace/src/plugins_pkgs/car_plugin/srv/: SetCarCommand.srv
bfmc_workspace/src/plugins_pkgs/gps_plugin/: CMakeLists.txt  package.xml
bfmc_workspace/src/plugins_pkgs/gps_plugin/include/: gps_plugin.hpp
bfmc_workspace/src/plugins_pkgs/gps_plugin/src/: gps_plugin.cpp
bfmc_workspace/src/traffic_light_pkg/: CMakeLists.txt
bfmc_workspace/src/traffic_light_pkg/msg/: traffic_light.msg
bfmc_workspace/src/traffic_light_pkg/src/: tl_talker.py
src/example/: CMakeLists.txt  package.xml
src/example/src/: RcBrainThread.py  camera.py  control.py
src/plugins_pkgs/bno055_plugin/: CMakeLists.txt  package.xml
src/plugins_pkgs/bno055_plugin/include/: bno055_plugin.hpp
src/plugins_pkgs/bno055_plugin/src/: bno055_plugin.cpp
src/plugins_pkgs/car_plugin/: CMakeLists.txt  package.xml
src/plugins_pkgs/car_plugin/include/: carlikerobot.hpp  carlikerobot_ros_plugin.hpp
src/plugins_pkgs/car_plugin/src/: carlikerobot.cpp  carlikerobot_ros_plugin.cpp
src/plugins_pkgs/pedestrian_object_plugin/: CMakeLists.txt  package.xml
src/plugins_pkgs/pedestrian_object_plugin/include/: geometric_point.h  pedestrian_object_plugin.h
src/plugins_pkgs/pedestrian_object_plugin/src/: geometric_point.cpp  pedestrian_object_plugin.cpp
src/plugins_pkgs/traffic_light_plugin/: CMakeLists.txt  package.xml
src/plugins_pkgs/traffic_light_plugin/include/: traffic_light_plugin.hpp
src/plugins_pkgs/traffic_light_plugin/src/: traffic_light_plugin.cpp
src/sim_pkg/: package.xml
src/sim_pkg/launch/: map_with_all_objects.launch  map_with_all_objects_REC.launch  map_with_car.launch  map_with_car_REC.launch
src/sim_pkg/launch/bash_scripts/: delay.sh
src/sim_pkg/launch/sublaunchers/: car.launch  car_REC.launch  enter_highway_signs.launch  leave_highway_signs.launch  members.launch  obstacle_car.launch  oneway_signs.launch  parking_signs.launch  pedestrian_objects.launch  priority_signs.launch  prohibited_signs.launch  ramp.launch  roadblock.launch  roundabout_signs.launch  stop_signs.launch  traffic_lights.launch  traffic_lights_controller.launch
src/sim_pkg/worlds/: world.world  world_with_separators.world
src/traffic_light_pkg/: CMakeLists.txt  package.xml
src/traffic_light_pkg/src/: tl_talker.py
src/utils/: CMakeLists.txt  network.sh  package.xml
src/utils/msg/: IMU.msg  localisation  localisation.msg
startup_workspace/src/startup_package/: CMakeLists.txt  package.xml
startup_workspace/src/startup_package/src/: main.py  run_view.py
startup_workspace/src/startup_package/src/bfmclib/: bno055_s.py  camera_s.py  camera_view.py  controller_p.py  gps_s.py  trafficlight_s.py
(+150 files in other folders)
