<?xml version="1.0"?>
<package format="2">
  <name>example</name>
  <version>0.0.0</version>
  <description>The example package</description>

  <maintainer email="simulator@todo.todo">simulator</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>utils</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>utils</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>utils</exec_depend>

</package>