<?xml version="1.0"?>

<package format="2">

  <name>bno055_plugin</name>
  <version>0.0.0</version>
  <description>The bno055_plugin package</description>
  <maintainer email="rares.lemnariu@ro.bosch.com"> Rares Lemnariu </maintainer>
  <license>Bosch ECC</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>utils</build_depend>
  
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>utils</exec_depend>

</package>