<?xml version="1.0"?>

<package format="2">

  <name>pedestrian_object_plugin</name>
  <version>0.0.0</version>
  <description>The pedestrian_object_plugin package</description>
  <maintainer email="rares.lemnariu@ro.bosch.com"> Rares Lemnariu </maintainer>  
  <license>Bosch ECC</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
