<?xml version="1.0"?>
  <package format="2">
  <name>startup_package</name>
  <version>0.0.0</version>
  <description>The startup_package package</description>
  <maintainer email="rares.lemnariu@ro.bosch.com"> Rares Lemnariu </maintainer>
  <license>Bosch ECC</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>cv_bridge</build_depend>
  <build_depend>opencv</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>car_plugin</build_depend>

  
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>opencv</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>car_plugin</exec_depend>

</package>
